# 2019-488-Vision

MainReactor/: CMakeLists.txt  README.md  SharedMat.cpp  SharedMat.h  camera.cpp  camera.h
MainReactor/calibration/RegularCameraCalibration/: calibration_settings.json
deepmatrixscripts/: aha.sh  color.sh  cst.sh  cstreactor.sh  depth.sh  ir.sh  mainreactor.sh  start.sh  targeting.sh
morten/: .gitignore  CMakeLists.txt  README.md  morten.cpp  mortenintel.cpp  mortenshared.cpp  realsense.cpp  smootour.cpp  smootour.h  vectorvision.cpp
sextant/: CMakeLists.txt  CMakeSettings.json  README.md  bestFrame.cpp  refVideoWriter.cpp  runtime.cpp  runtime.h  setup.cpp
targetingcomputer/: CMakeLists.txt  rstc.cpp  rstc.h  targetingcomputer.cpp  targetingcomputer.h
